--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
         <div class="main-content">
         {{>header}}
+        <p>This site was created by Pinkal. It uses data from mapbox.com and darksky.net</p>
         <img class="portrait" src='/img/Penguins.jpg'>
         </div>
         {{>footer}}
